Moved down text a bit to prevent overlap
git-svn-id: file:///home/svn/DVA2006@376 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/legacy/main_ff.css
+++ b/static/css/legacy/main_ff.css
@@ -86,7 +86,7 @@ TR.MenuItem {
 /* Controls the sizing and formatting of the main display section     */
 div#main {
 	position: absolute;
-	top: 88px;
+	top: 96px;
 	bottom: 1px;
 	left: 160px;
 	margin-left: 1px;
